syntax = "proto3";

option java_package = "io.stargate.proto";
option go_package = "stargate/proto";

package stargate;

import "query.proto";

service Stargate { // Maybe this should be call `Query` or `Cql`?
  rpc Execute(Query) returns (Result) {}
  rpc ExecuteBatch(Batch) returns (Result) {}
}

